test_regress/t/t_array_pattern_bad2.out
%Error: t/t_array_pattern_bad2.v:22:16: Multiple '{ default: } clauses
                                      : ... In instance t
   22 |       myinfo = '{default: '0,
      |                ^~
%Error: Exiting due to
